crates/connectors/ndc-bigquery/tests/snapshots/query_tests__predicates__select_where_album_id_equals_self.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 3,
        "Title": "Permanent Vacation"
      }
    ]
  }
]
