crates/connectors/ndc-bigquery/tests/snapshots/query_tests__predicates__select_where_album_id_greater_than_or_equal_to.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 3,
        "Title": "Permanent Vacation"
      },
      {
        "AlbumId": 4,
        "Title": "Jagged Little Pill"
      },
      {
        "AlbumId": 5,
        "Title": "Facelift"
      }
    ]
  }
]
