crates/connectors/ndc-bigquery/tests/snapshots/query_tests__predicates__select_where_album_id_is_not_null.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Balls to the Wall"
      },
      {
        "Title": "Permanent Vacation"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      }
    ]
  }
]
