crates/connectors/ndc-bigquery/tests/snapshots/query_tests__predicates__select_where_name_in.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 5,
        "Title": "Facelift"
      }
    ]
  }
]
