crates/connectors/ndc-bigquery/tests/snapshots/query_tests__predicates__select_where_unrelated_exists.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Permanent Vacation"
      }
    ]
  }
]
